objects/FLODocs__FLO_Make_Junction_Log__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Last_Time_Run__c</fullName>
        <label>Last Time Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Salesforce_Type__c</fullName>
        <label>Salesforce Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Scanner_Count_Completed__c</fullName>
        <label>Scanner Count Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Scanner_Count__c</fullName>
        <label>Scanner Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FLO Make Junction Log</label>
    <nameField>
        <label>Flo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLO Make Junction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>